crates/rome_formatter/tests/specs/prettier/js/decorators/mixed.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: mixed.js

---
# Input
```js
// https://github.com/prettier/prettier/issues/6747

@foo
export default class MyComponent {
  @task
  *foo() {
  }
}
```

# Output
```js
// https://github.com/prettier/prettier/issues/6747

@foo
export default class MyComponent {
  @task
  *foo() {
  }
}

```

# Errors
```
error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ mixed.js:3:1
  │
3 │ @foo
  │ ^^^^ TypeScript only syntax

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ mixed.js:5:3
  │
5 │   @task
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here


```


